fixed udp communication error

--- a/latex/structserver__s.tex
+++ b/latex/structserver__s.tex
@@ -11,7 +11,9 @@
 int \hyperlink{structserver__s_a7109ed4db0376f7de840d82c4379099d}{sockfd}
 \begin{DoxyCompactList}\small\item\em server의 socket file descriptor \end{DoxyCompactList}\item 
 struct sockaddr\-\_\-in \hyperlink{structserver__s_aa49ed3594b99b1da4de179995dfa553d}{server\-\_\-addr}
-\begin{DoxyCompactList}\small\item\em server의 socket address \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em server의 socket address \end{DoxyCompactList}\item 
+struct sockaddr\-\_\-in \hyperlink{structserver__s_a542d49f8aee930024091c320530d8dbf}{client\-\_\-addr}
+\end{DoxyCompactItemize}
 
 
 \subsection{Detailed Description}
@@ -22,6 +24,13 @@ Definition at line 21 of file server.\-h.
 
 
 \subsection{Member Data Documentation}
+\hypertarget{structserver__s_a542d49f8aee930024091c320530d8dbf}{\index{server\-\_\-s@{server\-\_\-s}!client\-\_\-addr@{client\-\_\-addr}}
+\index{client\-\_\-addr@{client\-\_\-addr}!server_s@{server\-\_\-s}}
+\subsubsection[{client\-\_\-addr}]{\setlength{\rightskip}{0pt plus 5cm}struct sockaddr\-\_\-in server\-\_\-s\-::client\-\_\-addr}}\label{structserver__s_a542d49f8aee930024091c320530d8dbf}
+
+
+Definition at line 26 of file server.\-h.
+
 \hypertarget{structserver__s_aa49ed3594b99b1da4de179995dfa553d}{\index{server\-\_\-s@{server\-\_\-s}!server\-\_\-addr@{server\-\_\-addr}}
 \index{server\-\_\-addr@{server\-\_\-addr}!server_s@{server\-\_\-s}}
 \subsubsection[{server\-\_\-addr}]{\setlength{\rightskip}{0pt plus 5cm}struct sockaddr\-\_\-in server\-\_\-s\-::server\-\_\-addr}}\label{structserver__s_aa49ed3594b99b1da4de179995dfa553d}
