--- a/latex/server_8h.tex
+++ b/latex/server_8h.tex
@@ -9,6 +9,7 @@
 {\ttfamily \#include $<$sys/socket.\-h$>$}\\*
 {\ttfamily \#include $<$arpa/inet.\-h$>$}\\*
 {\ttfamily \#include $<$netinet/in.\-h$>$}\\*
+{\ttfamily \#include \char`\"{}../\-P\-R\-O\-T\-O\-C\-O\-L/kmp.\-h\char`\"{}}\\*
 \subsection*{Classes}
 \begin{DoxyCompactItemize}
 \item 
@@ -52,14 +53,14 @@ Definition at line 4 of file server.\-h.
 \subsubsection[{B\-U\-F\-\_\-\-M\-A\-X\-\_\-\-L\-E\-N}]{\setlength{\rightskip}{0pt plus 5cm}\#define B\-U\-F\-\_\-\-M\-A\-X\-\_\-\-L\-E\-N~1024}}\label{server_8h_aae114cdd7784a59af222f175dac6312b}
 
 
-Definition at line 15 of file server.\-h.
+Definition at line 16 of file server.\-h.
 
 \hypertarget{server_8h_a614217d263be1fb1a5f76e2ff7be19a2}{\index{server.\-h@{server.\-h}!P\-O\-R\-T@{P\-O\-R\-T}}
 \index{P\-O\-R\-T@{P\-O\-R\-T}!server.h@{server.\-h}}
 \subsubsection[{P\-O\-R\-T}]{\setlength{\rightskip}{0pt plus 5cm}\#define P\-O\-R\-T~8080}}\label{server_8h_a614217d263be1fb1a5f76e2ff7be19a2}
 
 
-Definition at line 16 of file server.\-h.
+Definition at line 17 of file server.\-h.
 
 
 
@@ -69,7 +70,7 @@ Definition at line 16 of file server.\-h.
 \subsubsection[{server\-\_\-t}]{\setlength{\rightskip}{0pt plus 5cm}typedef struct {\bf server\-\_\-s} {\bf server\-\_\-t}}}\label{server_8h_a0d46b4d18005bd6a95dddba0e65bddf6}
 
 
-Definition at line 20 of file server.\-h.
+Definition at line 21 of file server.\-h.
 
 
 
