--- a/latex/client_8h.tex
+++ b/latex/client_8h.tex
@@ -9,6 +9,7 @@
 {\ttfamily \#include $<$sys/socket.\-h$>$}\\*
 {\ttfamily \#include $<$arpa/inet.\-h$>$}\\*
 {\ttfamily \#include $<$netinet/in.\-h$>$}\\*
+{\ttfamily \#include \char`\"{}../\-P\-R\-O\-T\-O\-C\-O\-L/kmp.\-h\char`\"{}}\\*
 \subsection*{Classes}
 \begin{DoxyCompactItemize}
 \item 
@@ -52,14 +53,14 @@ Definition at line 4 of file client.\-h.
 \subsubsection[{B\-U\-F\-\_\-\-M\-A\-X\-\_\-\-L\-E\-N}]{\setlength{\rightskip}{0pt plus 5cm}\#define B\-U\-F\-\_\-\-M\-A\-X\-\_\-\-L\-E\-N~1024}}\label{client_8h_aae114cdd7784a59af222f175dac6312b}
 
 
-Definition at line 15 of file client.\-h.
+Definition at line 17 of file client.\-h.
 
 \hypertarget{client_8h_a614217d263be1fb1a5f76e2ff7be19a2}{\index{client.\-h@{client.\-h}!P\-O\-R\-T@{P\-O\-R\-T}}
 \index{P\-O\-R\-T@{P\-O\-R\-T}!client.h@{client.\-h}}
 \subsubsection[{P\-O\-R\-T}]{\setlength{\rightskip}{0pt plus 5cm}\#define P\-O\-R\-T~8080}}\label{client_8h_a614217d263be1fb1a5f76e2ff7be19a2}
 
 
-Definition at line 16 of file client.\-h.
+Definition at line 18 of file client.\-h.
 
 
 
@@ -69,7 +70,7 @@ Definition at line 16 of file client.\-h.
 \subsubsection[{client\-\_\-t}]{\setlength{\rightskip}{0pt plus 5cm}typedef struct {\bf client\-\_\-s} {\bf client\-\_\-t}}}\label{client_8h_a7bfebc8e763f36d1870198931d6b5eb1}
 
 
-Definition at line 20 of file client.\-h.
+Definition at line 22 of file client.\-h.
 
 
 
